pre-commit hooks run manually

--- a/try/synth_v1/work/demo.ipynb
+++ b/try/synth_v1/work/demo.ipynb
@@ -2,65 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f2eaa9b2-3b24-4910-b95a-0a5b66fa09c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sdv import load_demo\n",
+    "\n",
     "metadata, tables = load_demo(metadata=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b5813fb2-8f1a-4393-9317-3d3058701528",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Metadata\n",
-       "  root_path: .\n",
-       "  tables: ['users', 'sessions', 'transactions']\n",
-       "  relationships:\n",
-       "    sessions.user_id -> users.user_id\n",
-       "    transactions.session_id -> sessions.session_id"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "60b688c1-7695-4e2a-a25d-0f43a2961ad7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "transaction_id             int64\n",
-       "session_id                 int64\n",
-       "timestamp         datetime64[ns]\n",
-       "amount                   float64\n",
-       "cancelled                   bool\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tables['transactions'].dtypes"
+    "tables[\"transactions\"].dtypes"
    ]
   },
   {
@@ -73,11 +42,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
