--- a/try/synth_v1/work/synth_test_data.ipynb
+++ b/try/synth_v1/work/synth_test_data.ipynb
@@ -36,42 +36,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "515d4a8b-0480-4a42-a751-36a1b41172a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
-    "\n",
     "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
     "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1d9d5210-3bca-41b7-a31d-3c06df7b6f0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Construct the PostgreSQL connection\n",
-    "uds_host = os.getenv('UDS_HOST')\n",
-    "uds_user = os.getenv('UDS_USER')\n",
-    "uds_passwd = os.getenv('UDS_PWD')\n",
+    "uds_host = os.getenv(\"UDS_HOST\")\n",
+    "uds_user = os.getenv(\"UDS_USER\")\n",
+    "uds_passwd = os.getenv(\"UDS_PWD\")\n",
     "\n",
-    "emapdb_engine = create_engine(f'postgresql://{uds_user}:{uds_passwd}@{uds_host}:5432/uds')"
+    "emapdb_engine = create_engine(\n",
+    "    f\"postgresql://{uds_user}:{uds_passwd}@{uds_host}:5432/uds\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7b0478ca-b292-4320-8e28-63379df934b7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the sql file into a query 'q' and the query into a dataframe\n",
-    "q = Path('query.sql').read_text()\n",
+    "q = Path(\"query.sql\").read_text()\n",
     "df = pd.read_sql_query(q, emapdb_engine)"
    ]
   },
@@ -89,18 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6992f5ac-02f6-4fa3-94fd-992c598891aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Minimal imports\n",
-    "from sdv import Metadata, SDV"
+    "from sdv import SDV, Metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "14f7ced8-a783-4f42-8ba8-46c546bb8dab",
    "metadata": {},
    "outputs": [],
@@ -122,12 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "558eeb3f-a30f-4d81-9b7d-5f5a98e6c59c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tz_cols = ['valid_from', 'scheduled_datetime', 'status_change_time', 'admission_time', 'discharge_time']\n",
+    "tz_cols = [\n",
+    "    \"valid_from\",\n",
+    "    \"scheduled_datetime\",\n",
+    "    \"status_change_time\",\n",
+    "    \"admission_time\",\n",
+    "    \"discharge_time\",\n",
+    "]\n",
     "for col in tz_cols:\n",
     "    df = remove_timezone(df, col)"
    ]
@@ -142,15 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bfdb3380-bf71-448a-ab45-a876c544ebb9",
    "metadata": {},
    "outputs": [],
    "source": [
     "fields = {\n",
-    "    'date_of_birth': {\n",
-    "        'type': 'datetime',\n",
-    "        'format': '%Y-%m-%d',\n",
+    "    \"date_of_birth\": {\n",
+    "        \"type\": \"datetime\",\n",
+    "        \"format\": \"%Y-%m-%d\",\n",
     "    }\n",
     "}"
    ]
@@ -165,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "38bd8e12-8e18-4bb9-9251-26fa0a9608b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "metadata = Metadata()\n",
     "metadata.add_table(\n",
-    "    name='tabpid',\n",
+    "    name=\"tabpid\",\n",
     "    data=df,\n",
     "    fields_metadata=fields,\n",
     ")"
@@ -180,38 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d03cdaa8-aa2b-4d13-b932-0fb4bbf438bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'fields': {'date_of_birth': {'type': 'datetime', 'format': '%Y-%m-%d'},\n",
-       "  'firstname': {'type': 'categorical'},\n",
-       "  'lastname': {'type': 'categorical'},\n",
-       "  'mrn': {'type': 'categorical'},\n",
-       "  'nhs_number': {'type': 'categorical'},\n",
-       "  'valid_from': {'type': 'datetime'},\n",
-       "  'cancelled': {'type': 'boolean'},\n",
-       "  'closed_due_to_discharge': {'type': 'boolean'},\n",
-       "  'comments': {'type': 'categorical'},\n",
-       "  'scheduled_datetime': {'type': 'datetime'},\n",
-       "  'status_change_time': {'type': 'datetime'},\n",
-       "  'name': {'type': 'categorical'},\n",
-       "  'admission_time': {'type': 'datetime'},\n",
-       "  'discharge_time': {'type': 'datetime'},\n",
-       "  'dept_name': {'type': 'categorical'}}}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Inspect the conversion that metadata.add_table did to the dataframe that you loaded\n",
-    "metadata.get_table_meta('tabpid')"
+    "metadata.get_table_meta(\"tabpid\")"
    ]
   },
   {
@@ -224,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "dc43f428-e404-4bc4-a160-7cf477500633",
    "metadata": {},
    "outputs": [],
@@ -242,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "073a892b-dd55-483b-8d11-7333b5f2e9e9",
    "metadata": {},
    "outputs": [],
@@ -269,180 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "00b16a46-e44f-4da3-8109-7916250c4fb4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date_of_birth</th>\n",
-       "      <th>firstname</th>\n",
-       "      <th>lastname</th>\n",
-       "      <th>mrn</th>\n",
-       "      <th>nhs_number</th>\n",
-       "      <th>valid_from</th>\n",
-       "      <th>cancelled</th>\n",
-       "      <th>closed_due_to_discharge</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>scheduled_datetime</th>\n",
-       "      <th>status_change_time</th>\n",
-       "      <th>name</th>\n",
-       "      <th>admission_time</th>\n",
-       "      <th>discharge_time</th>\n",
-       "      <th>dept_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2018-08-09</td>\n",
-       "      <td>TIANYUN</td>\n",
-       "      <td>WILLIAMS</td>\n",
-       "      <td>21010530</td>\n",
-       "      <td>4667319151</td>\n",
-       "      <td>2022-05-19 01:46:33</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-18 22:53:00</td>\n",
-       "      <td>2022-05-19 01:46:20</td>\n",
-       "      <td>Inpatient consult to Haematology</td>\n",
-       "      <td>2022-05-19 05:16:51</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>UCH SDEC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1954-07-04</td>\n",
-       "      <td>DANIELLE</td>\n",
-       "      <td>MONTOYA</td>\n",
-       "      <td>21506951</td>\n",
-       "      <td>4085170767</td>\n",
-       "      <td>2022-05-19 03:17:45</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-19 03:35:00</td>\n",
-       "      <td>2022-05-19 03:18:21</td>\n",
-       "      <td>Inpatient consult to Urology</td>\n",
-       "      <td>2022-05-19 06:13:41</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>UCH SDEC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1961-11-27</td>\n",
-       "      <td>CHI</td>\n",
-       "      <td>SUMANG</td>\n",
-       "      <td>21507592</td>\n",
-       "      <td>4964860787</td>\n",
-       "      <td>2022-05-18 22:36:18</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-18 22:08:00</td>\n",
-       "      <td>2022-05-18 22:36:26</td>\n",
-       "      <td>Inpatient consult to Oncology</td>\n",
-       "      <td>2022-05-19 02:05:34</td>\n",
-       "      <td>2022-05-19 03:48:01</td>\n",
-       "      <td>UCH EMERGENCY DEPT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1949-01-10</td>\n",
-       "      <td>BEAU</td>\n",
-       "      <td>BRERETON</td>\n",
-       "      <td>21508917</td>\n",
-       "      <td>7158435865</td>\n",
-       "      <td>2022-05-19 14:37:01</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-19 14:40:00</td>\n",
-       "      <td>2022-05-19 14:37:00</td>\n",
-       "      <td>Inpatient consult to Acute Medicine</td>\n",
-       "      <td>2022-05-19 06:09:03</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>UCH SDEC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1970-12-20</td>\n",
-       "      <td>KISHOR</td>\n",
-       "      <td>MONTOYA</td>\n",
-       "      <td>21507592</td>\n",
-       "      <td>4324403708</td>\n",
-       "      <td>2022-05-19 16:11:25</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-05-19 15:08:00</td>\n",
-       "      <td>2022-05-19 16:11:16</td>\n",
-       "      <td>Inpatient consult to Mental Health Liaison Team</td>\n",
-       "      <td>2022-05-19 11:33:00</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>UCH SDEC</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  date_of_birth firstname  lastname       mrn  nhs_number          valid_from  \\\n",
-       "0    2018-08-09   TIANYUN  WILLIAMS  21010530  4667319151 2022-05-19 01:46:33   \n",
-       "1    1954-07-04  DANIELLE   MONTOYA  21506951  4085170767 2022-05-19 03:17:45   \n",
-       "2    1961-11-27       CHI    SUMANG  21507592  4964860787 2022-05-18 22:36:18   \n",
-       "3    1949-01-10      BEAU  BRERETON  21508917  7158435865 2022-05-19 14:37:01   \n",
-       "4    1970-12-20    KISHOR   MONTOYA  21507592  4324403708 2022-05-19 16:11:25   \n",
-       "\n",
-       "   cancelled  closed_due_to_discharge comments  scheduled_datetime  \\\n",
-       "0      False                    False      NaN 2022-05-18 22:53:00   \n",
-       "1      False                    False      NaN 2022-05-19 03:35:00   \n",
-       "2      False                    False      NaN 2022-05-18 22:08:00   \n",
-       "3      False                    False      NaN 2022-05-19 14:40:00   \n",
-       "4      False                    False      NaN 2022-05-19 15:08:00   \n",
-       "\n",
-       "   status_change_time                                             name  \\\n",
-       "0 2022-05-19 01:46:20                 Inpatient consult to Haematology   \n",
-       "1 2022-05-19 03:18:21                     Inpatient consult to Urology   \n",
-       "2 2022-05-18 22:36:26                    Inpatient consult to Oncology   \n",
-       "3 2022-05-19 14:37:00              Inpatient consult to Acute Medicine   \n",
-       "4 2022-05-19 16:11:16  Inpatient consult to Mental Health Liaison Team   \n",
-       "\n",
-       "       admission_time      discharge_time           dept_name  \n",
-       "0 2022-05-19 05:16:51                 NaT            UCH SDEC  \n",
-       "1 2022-05-19 06:13:41                 NaT            UCH SDEC  \n",
-       "2 2022-05-19 02:05:34 2022-05-19 03:48:01  UCH EMERGENCY DEPT  \n",
-       "3 2022-05-19 06:09:03                 NaT            UCH SDEC  \n",
-       "4 2022-05-19 11:33:00                 NaT            UCH SDEC  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sdv.sample_all()['tabpid'].head()"
+    "sdv.sample_all()[\"tabpid\"].head()"
    ]
   },
   {
@@ -459,24 +274,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7a5043a3-4cb9-4445-beb0-8fe6d3fa3360",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdv.save('sdv_model.pkl')"
+    "sdv.save(\"sdv_model.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c1be99b9-b79d-4a1f-b1cb-dd7b89d0e369",
    "metadata": {},
    "outputs": [],
    "source": [
     "sample = sdv.sample_all()\n",
-    "sample_df = sample['tabpid']\n",
-    "sample_df.to_pickle('sample_df')"
+    "sample_df = sample[\"tabpid\"]\n",
+    "sample_df.to_pickle(\"sample_df\")"
    ]
   },
   {
@@ -489,11 +304,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
