--- a/src/api/perrt/perrt.ipynb
+++ b/src/api/perrt/perrt.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8b4d732-9dc5-4349-8445-ef34fc8befc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "from typing import List\n",
+    "\n",
+    "import pandas as pd\n",
+    "from pydantic import BaseModel"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "d6b21770-958e-4d48-8530-7cd6a40e1140",
+   "id": "1adf3377-d3db-4c2c-874e-61547dc377d3",
    "metadata": {},
    "source": [
     "**NOTE**: please run this notebook from `./src`"
@@ -22,15 +36,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8b4d732-9dc5-4349-8445-ef34fc8befc1",
+   "id": "7c8cb728-9edd-462f-bfe6-c8b4db73eefe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "from typing import List\n",
-    "\n",
-    "import pandas as pd\n",
-    "from pydantic import BaseModel"
+    "assert Path.cwd().parts[-2:] == (\"HyUi\", \"src\")"
    ]
   },
   {
@@ -77,18 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82a75cfe-6858-4bdc-b98f-bb9ea714f390",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drop na's inserted by synthetic data process\n",
-    "# df.dropna(subset=['id_in_application'], inplace=True)\n",
-    "# df.to_hdf('mock.h5', 'data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2bbe31b0-47ec-4f83-8c5c-0fa3383d47ae",
    "metadata": {},
    "outputs": [],
@@ -100,6 +98,36 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5b91e35-ba2a-435c-97df-193fc6004d40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cbc05ae-64f7-4018-89d2-74cea947319a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"id_in_application\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1457b1d-285e-4275-aaf1-05345ef4643d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(df[\"id_in_application\"].value_counts()) == 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3c0384e-d029-4267-a754-c42786833082",
    "metadata": {},
    "outputs": [],
    "source": []
