--- a/notebooks/wrangle_beds.ipynb
+++ b/notebooks/wrangle_beds.ipynb
@@ -112,6 +112,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e23ef8d-7b7b-4c27-8795-29d3673a3fcc",
+   "metadata": {},
+   "source": [
+    "remove null and waiting locations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bf91ca26-4f52-442f-9b4a-79e9fbdad937",
@@ -121,6 +129,14 @@
     "mask = df[\"bed\"].str.lower().isin([\"null\", \"wait\"])\n",
     "df = df[~mask]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdf2bbf0-ee6b-4b63-aece-86fa6cd199af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -146,7 +162,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2fff9270-227f-445d-a839-6b1b37a444b8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "groups.get_group(\"GWB L01 CRITICAL CARE\")"
@@ -155,17 +173,199 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76c6b744-fbe4-4aea-a760-2062e7920007",
+   "id": "71abd542-23fe-4bd6-af35-ce39279baa5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "groups.agg(beds=(\"location_id\", \"count\"))"
+    "res = groups.agg(\n",
+    "    beds=(\"location_id\", \"count\"),\n",
+    "    patients=(\"occupied\", \"sum\"),\n",
+    "    last_dc=(\"cvl_discharge\", lambda x: x.max(skipna=True)),\n",
+    "    modified_at=(\"modified_at\", \"max\"),\n",
+    ")\n",
+    "res[\"empties\"] = res[\"beds\"] - res[\"patients\"]\n",
+    "res[\"opens\"] = res[\"empties\"]  # place holder : need to subtract closed from empties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f4ccb14-4a78-476a-9cae-c0bb9743fb8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res[\"last_dc\"] = (res[\"modified_at\"] - res[\"last_dc\"]).apply(\n",
+    "    lambda x: pd.Timedelta.floor(x, \"d\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2128efb4-38c6-484e-a507-484469625605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res[\"closed_temp\"] = pd.DataFrame(\n",
+    "    [\n",
+    "        res[\"last_dc\"] > pd.Timedelta(2, \"days\"),\n",
+    "        res[\"last_dc\"] <= pd.Timedelta(30, \"days\"),\n",
+    "        res[\"patients\"] == 0,\n",
+    "    ]\n",
+    ").T.all(axis=\"columns\")\n",
+    "\n",
+    "res[\"closed_perm\"] = pd.DataFrame(\n",
+    "    [\n",
+    "        res[\"last_dc\"] > pd.Timedelta(30, \"days\"),\n",
+    "        res[\"patients\"] == 0,\n",
+    "    ]\n",
+    ").T.all(axis=\"columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "643b8c42-536c-4508-b346-0d7aa79bafe2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = ~res[\"closed_perm\"]\n",
+    "\n",
+    "res = res[mask]\n",
+    "res = res[\n",
+    "    [\"beds\", \"patients\", \"empties\", \"opens\", \"last_dc\", \"closed_temp\" \"modified_at\"]\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f757b057-591c-4a2b-b0f2-cc25dc8ff8ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97e4b523-9900-4f85-977e-54ffc6f95db1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "def _split_location_string(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Splits a location string into dept/room/bed\n",
+    "    \"\"\"\n",
+    "    temp = (\n",
+    "        df[\"location_string\"]\n",
+    "        .str.split(\"^\", expand=True)\n",
+    "        .rename(columns={0: \"dept\", 1: \"room\", 2: \"bed\"})\n",
+    "    )\n",
+    "    for s in [\"dept\", \"room\", \"bed\"]:\n",
+    "        df[s] = temp[s]\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def _remove_non_beds(\n",
+    "    df: pd.DataFrame, nonbeds: List[str] = [\"null\", \"wait\"]\n",
+    ") -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Removes non beds e.g. null, wait\n",
+    "    \"\"\"\n",
+    "    mask = df[\"bed\"].str.lower().isin(nonbeds)\n",
+    "    df = df[~mask]\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def _aggregate_by_department(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Aggregation from location (bed) level to ward level\n",
+    "    \"\"\"\n",
+    "    groups = df.groupby(\"department\")\n",
+    "    # aggregate by dept\n",
+    "    res = groups.agg(\n",
+    "        beds=(\"location_id\", \"count\"),\n",
+    "        patients=(\"occupied\", \"sum\"),\n",
+    "        last_dc=(\"cvl_discharge\", lambda x: x.max(skipna=True)),\n",
+    "        modified_at=(\"modified_at\", \"max\"),\n",
+    "    )\n",
+    "    # calculate additional numbers\n",
+    "    res[\"empties\"] = res[\"beds\"] - res[\"patients\"]\n",
+    "    res[\"opens\"] = res[\"empties\"]  # place holder : need to subtract closed from empties\n",
+    "    res[\"last_dc\"] = (\n",
+    "        (res[\"modified_at\"] - res[\"last_dc\"])\n",
+    "        .apply(lambda x: pd.Timedelta.floor(x, \"d\"))\n",
+    "        .dt.days\n",
+    "    )\n",
+    "\n",
+    "    # defined closed: temp and perm\n",
+    "    res[\"closed_temp\"] = pd.DataFrame(\n",
+    "        [\n",
+    "            res[\"last_dc\"] > 2,\n",
+    "            res[\"last_dc\"] <= 30,\n",
+    "            res[\"patients\"] == 0,\n",
+    "        ]\n",
+    "    ).T.all(axis=\"columns\")\n",
+    "\n",
+    "    res[\"closed_perm\"] = pd.DataFrame(\n",
+    "        [\n",
+    "            res[\"last_dc\"] > 30,\n",
+    "            res[\"patients\"] == 0,\n",
+    "        ]\n",
+    "    ).T.all(axis=\"columns\")\n",
+    "\n",
+    "    # drop closed perm\n",
+    "    mask = ~res[\"closed_perm\"]\n",
+    "\n",
+    "    res = res[mask]\n",
+    "    res = res[\n",
+    "        [\n",
+    "            \"beds\",\n",
+    "            \"patients\",\n",
+    "            \"empties\",\n",
+    "            \"opens\",\n",
+    "            \"last_dc\",\n",
+    "            \"closed_temp\",\n",
+    "            \"modified_at\",\n",
+    "        ]\n",
+    "    ]\n",
+    "    res.reset_index(inplace=True)\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "def aggregate_by_department(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Aggregation from location (bed) level to ward level\n",
+    "    Wrapper function\n",
+    "    \"\"\"\n",
+    "    df = _split_location_string(df)\n",
+    "    df = _remove_non_beds(df)\n",
+    "    df = _aggregate_by_department(df)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61d459c7-c585-4b83-98e6-914465b4459e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_sql(\"bedsmock\", engine)\n",
+    "aggregate_by_department(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "849d8692-635b-47be-893a-b3c506191712",
    "metadata": {},
    "outputs": [],
    "source": []
