minor edit to test publish github action

--- a/docs/developer/documentation.qmd
+++ b/docs/developer/documentation.qmd
@@ -16,3 +16,5 @@ quarto preview
 ```
 
 Don't forget that changes to config (e.g. `_quarto.yml` may need you to rerun `quarto render` to ensure the whole site is correctly rebuilt)
+
+When you push to either *dev* or *main* branches, then a GitHub Action (see `.github/workflows/publish.yml`) will be triggered that should publish the current documentation to https://hylode.github.io/HyUi/.
