--- a/docs/developer/workflow.qmd
+++ b/docs/developer/workflow.qmd
@@ -1,6 +1,8 @@
 :::{.callout-note}
-Persona = developer reading this who wants to deploy an dash app
-Setting: working on their own lap top with access to UCLH data and machines
+Persona
+: developer reading this who wants to deploy an dash app
+Setting
+: working on their own lap top with access to UCLH data and machines
 :::
 
 # Development workflow
