--- a/docs/vignettes/beds_v3NHNN.ipynb
+++ b/docs/vignettes/beds_v3NHNN.ipynb
@@ -5,7 +5,7 @@
    "id": "df8c0c31-c0cb-497f-a75c-ea089efd75be",
    "metadata": {},
    "source": [
-    "## NHNN\n",
+    "## Working notes on merging Caboodle and EMAP (NHNN)\n",
     "\n",
     "- 2022-07-03vNHNN\n",
     "- specifically for NHNN critical care\n",
