--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -30,15 +30,15 @@ pytest # OPTIONAL
 docker-compose up -d --build && docker-composes logs -f
 ```
 
-Go to [http://my-host-name:8094/docs](http://my-host-name:8094/docs) for the API
+Go to [http://my-host-name:8094/docs](http://my-host-name:8094/docs) for the API. For example for this might be [http://172.16.149.202:8094]().
 
-Go to [http://my-host-name:8095](http://my-host-name:8095) for the dashboard landing page
+Go to [http://my-host-name:8095](http://my-host-name:8095) for the dashboard landing page. For example for this might be [http://172.16.149.202:8095]().
 
-Refer to [Deployment](user_guide/deployment.md) for more details.
+Refer to [Deployment](developer/deployment.qmd) for more details.
 
 ### Development
 
-Refer to [Dev Setup](user_guide/dev-setup.md) for details on setting up development environments.
+Refer to [Dev Setup](developer/setup.qmd) for details on setting up development environments.
 
 ### Development (Hospital)
 
@@ -122,7 +122,7 @@ docker-compose up -d --build && docker-compose logs -f
 |-- synth               // Synthetic data generation for testing
     |-- work
 |-- tests
-|-- docs
+|-- docs                // this Quarto website
 |-- data
 |-- outputs
 |-- notebooks           // jupyter notebooks etc
@@ -130,50 +130,6 @@ docker-compose up -d --build && docker-compose logs -f
 
 
 ```
-
-## Getting started
-
-To start using this project, [first make sure your system meets its
-requirements](#requirements).
-
-To be added.
-
-### Requirements
-
-```{note} Requirements for contributors
-[Contributors have some additional requirements][contributing]!
-```
-
-- Python 3.6.1+ installed
-- a `.secrets` file with the [required secrets and
-  credentials](#required-secrets-and-credentials)
-- [load environment variables][docs-loading-environment-variables] from `.envrc`
-
-To install the Python requirements, open your terminal and enter:
-
-```shell
-pip install -r requirements.txt
-```
-
-## Required secrets and credentials
-
-To run this project, [you need a `.secrets` file with secrets/credentials as
-environmental variables][docs-loading-environment-variables-secrets]. The
-secrets/credentials should have the following environment variable name(s):
-
-| Secret/credential | Environment variable name | Description                                |
-|-------------------|---------------------------|--------------------------------------------|
-| Secret 1          | `SECRET_VARIABLE_1`       | Plain English description of Secret 1.     |
-| Credential 1      | `CREDENTIAL_VARIABLE_1`   | Plain English description of Credential 1. |
-
-Once you've added, [load these environment variables using
-`.envrc`][docs-loading-environment-variables].
-
-## Licence
-
-Unless stated otherwise, the codebase is released under the MIT License. This covers
-both the codebase and any sample code in the documentation. The documentation is ©
-Crown copyright and available under the terms of the Open Government 3.0 licence.
 
 ## Contributing
 
@@ -185,8 +141,7 @@ contributing guidelines][contributing].
 [This project structure is based on the `govcookiecutter` template
 project][govcookiecutter].
 
-[contributing]: ./docs/contributor_guide/CONTRIBUTING.md
+[contributing]: ./docs/contributor_guide/CONTRIBUTING.qmd
 [govcookiecutter]: https://github.com/best-practice-and-impact/govcookiecutter
-[docs-loading-environment-variables]: ./docs/user_guide/loading_environment_variables.md
-[docs-loading-environment-variables-secrets]: ./docs/user_guide/loading_environment_variables.md#storing-secrets-and-credentials
-[provisioning]: ./docs/notes/provisioning_data.md
+[docs-loading-environment-variables]: ./docs/developer/environment_variables.qmd
+[docs-loading-environment-variables-secrets]: ./docs/developer/environment_variables.md#storing-secrets-and-credentials
