--- a/docs/vignettes/beds_v3UCLH.ipynb
+++ b/docs/vignettes/beds_v3UCLH.ipynb
@@ -5,6 +5,8 @@
    "id": "df8c0c31-c0cb-497f-a75c-ea089efd75be",
    "metadata": {},
    "source": [
+    "## Working notes on merging caboodle info on beds with EMAP (UCLH)\n",
+    "\n",
     "- 2022-07-03\n",
     "- working notes on merging caboodle info on beds with EMAP\n",
     "- aim is to build a reliable view of bed census\n",
@@ -401,7 +403,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
+   }
   }
  },
  "nbformat": 4,
