--- a/docs/vignettes/icu-tap-aggregate-probs.ipynb
+++ b/docs/vignettes/icu-tap-aggregate-probs.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cac99b72",
+   "metadata": {},
+   "source": [
+    "## ICU aggregate probabilities"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ecfae12d-923a-47ba-a6cf-879f6ac85956",
@@ -208,7 +216,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
+   }
   }
  },
  "nbformat": 4,
