--- a/docs/vignettes/beds_v3NHNN.ipynb
+++ b/docs/vignettes/beds_v3NHNN.ipynb
@@ -350,7 +350,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
+   }
   }
  },
  "nbformat": 4,
