--- a/docs/vignettes/wrangle_beds.ipynb
+++ b/docs/vignettes/wrangle_beds.ipynb
@@ -5,6 +5,8 @@
    "id": "3938ac91-5761-48ea-bcff-b6852395ef75",
    "metadata": {},
    "source": [
+    "## Wrangle live beds into a simple census\n",
+    "\n",
     "Run the beds live sql and then wrangle the data into a simple census"
    ]
   },
@@ -382,7 +384,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
+   }
   }
  },
  "nbformat": 4,
