--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -2,9 +2,7 @@
 title: HyUI documentation
 ---
 
-User interface for the HYLODE project Much of the project structure is based
-on the[`govcookiecutter` template project][govcookiecutter] but is adapted
-for the development of Plotly Dash apps within a hospital environment. A
+User interface for the HYLODE project Much of the project structure is based on the[`govcookiecutter` template project][govcookiecutter] but is adapted for the development of Plotly Dash apps within a hospital environment. A
 template application would be split into a frontend and a backend with
 communication between the two via HTTP, and the project orchestrated by
 docker-compose.
