--- a/docs/developer/setup.qmd
+++ b/docs/developer/setup.qmd
@@ -164,20 +164,20 @@ These will be the Python virtual envronments that contains all the dependencies 
 In the `hyui-web` terminal in the root directory:
 
 ```sh
-> pip install -e code/config
-> pip install -e code/utils
-> pip install -e code/models
-> pip install -e code/web
+> pip install -e "code/config[test]"
+> pip install -e "code/utils[test]"
+> pip install -e "code/models[test]"
+> pip install -e "code/web[test]"
 ```
 
 ## Install The API Requirements
 In the `hyui-api` terminal in the root directory:
 
 ```sh
-> pip install -e code/config
-> pip install -e code/utils
-> pip install -e code/models
-> pip install -e code/api
+> pip install -e "code/config[test]"
+> pip install -e "code/utils[test]"
+> pip install -e "code/models[test]"
+> pip install -e "code/api[test]"
 ```
 
 ## Running The Servers Manually When Developing
