--- a/docs/developer/setup.qmd
+++ b/docs/developer/setup.qmd
@@ -128,23 +128,26 @@ Once you're up and running, you can review the development workflow in [Developm
 See [Hylode HySys](https://github.com/HYLODE/HySys/tree/dev/hylode#5-development)
 
 
-# Experimental PyEnv + Virtualenv + Pip Development Workflow
+# Experimental PyEnv + Virtualenv + Pip Workflow
+
+## Development
+
 
 This is an experimental workflow designed to ultimately align the way packages are installed on development machines and in production. It is ultimately inteded to replace Conda.
 
-## Install Requirements
+### Install Requirements
 
 - Install (https://github.com/pyenv/pyenv)[pyenv]
 - Install (https://github.com/pyenv/pyenv-virtualenv)[pyenv-virtualenv]
 
-## Create Required Virtual Environments
+### Create Required Virtual Environments
 
 ```sh
 > pyenv virtualenv 3.10.7 hyui-web
 > pyenv virtualenv 3.10.7 hyui-api
 ```
 
-## Activate Virtual Environment
+### Activate Virtual Environment
 
 In one shell:
 
@@ -159,7 +162,7 @@ In another shell:
 
 These will be the Python virtual envronments that contains all the dependencies for the Dash web app and the API backend.
 
-## Install The Website App Requirements
+### Install The Website App Requirements
 
 In the `hyui-web` terminal in the root directory:
 
@@ -170,7 +173,7 @@ In the `hyui-web` terminal in the root directory:
 > pip install -e "code/web[test]"
 ```
 
-## Install The API Requirements
+### Install The API Requirements
 In the `hyui-api` terminal in the root directory:
 
 ```sh
@@ -180,7 +183,7 @@ In the `hyui-api` terminal in the root directory:
 > pip install -e "code/api[test]"
 ```
 
-## Running The Servers Manually When Developing
+### Running The Servers Manually When Developing
 
 The web server when in the `hyui-web` shell:
 
@@ -195,3 +198,23 @@ The API server when in the `hyui-api` shell:
 ```
 
 Ensure you replace `.env` with the correct path to your development `.env` file. The command `env $(grep -v '^#' .env | xargs)` loads the contents of the `.env` into the environment just for the current execution. The `grep -v '^#'` part excludes lines beginning with a `#` in the env file.
+
+## Deployment
+
+First create a `code/.env` file and ensure it is correct.
+
+### Build the Docker Compose services.
+
+In the `code` directory:
+
+```sh
+> docker compose build
+```
+
+### Run the Docker Compose services
+
+In the `code` directory:
+
+```sh
+> docker compose up
+```
