--- a/docs/developer/setup.qmd
+++ b/docs/developer/setup.qmd
@@ -215,6 +215,10 @@ The API server when in the `hyui-api` shell:
 
 Ensure you replace `.env` with the correct path to your development `.env` file. The command `env $(grep -v '^#' .env | xargs)` loads the contents of the `.env` into the environment just for the current execution. The `grep -v '^#'` part excludes lines beginning with a `#` in the env file.
 
+### Running in PyCharm
+
+On MacOS you will likely need to add the environment variable `OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES` to the `code/web` debugging process to stop a crash. This is due to a bug in the way the Dash background callback system works.
+
 ## Deployment
 
 First create a `code/.env` file and ensure it is correct.
