--- a/docs/developer/setup.qmd
+++ b/docs/developer/setup.qmd
@@ -195,6 +195,10 @@ In the `hyui-api` terminal in the root directory:
 > pip install -e "code/api[test]"
 ```
 
+### Configuring Environment Variables
+
+An example environment variable file can be found at `code/.env.example`. The environment variables for each app are documented in the Pydantic Settings classes in `code/web/src/web/config.py` and `code/api/src/api/config.py`. An important one for development and production is the `WEB_API_URL` variable. This should be set to the host and port of your `code/api` server so most likely something like `http://api:8000` for running in Docker or `http://localhost:[port]/mock` for development. Note that in development a `/mock` path has been added. This allows the Dash web app to use all the mock endpoints instead of the live endpoints.
+
 ### Running The Servers Manually When Developing
 
 The web server when in the `hyui-web` shell:
@@ -210,6 +214,10 @@ The API server when in the `hyui-api` shell:
 ```
 
 Ensure you replace `.env` with the correct path to your development `.env` file. The command `env $(grep -v '^#' .env | xargs)` loads the contents of the `.env` into the environment just for the current execution. The `grep -v '^#'` part excludes lines beginning with a `#` in the env file.
+
+### Running in PyCharm
+
+On MacOS you will likely need to add the environment variable `OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES` to the `code/web` debugging process to stop a crash. This is due to a bug in the way the Dash background callback system works.
 
 ## Deployment
 
