--- a/docs/developer/setup.qmd
+++ b/docs/developer/setup.qmd
@@ -82,13 +82,13 @@ An example environment variable file can be found at `.env.example`. The environ
 The web server when in the `hyui-web` shell:
 
 ```sh
-> env $(grep -v '^#' .env | xargs) python -m web.main
+env $(grep -v '^#' .env | xargs) python -m web.main
 ```
 
 The API server when in the `hyui-api` shell:
 
 ```sh
-> env $(grep -v '^#' .env | xargs) uvicorn api.main:app --reload --port 8092
+env $(grep -v '^#' .env | xargs) uvicorn api.main:app --reload --port 8092
 ```
 
 Ensure you replace `.env` with the correct path to your development `.env` file. The command `env $(grep -v '^#' .env | xargs)` loads the contents of the `.env` into the environment just for the current execution. The `grep -v '^#'` part excludes lines beginning with a `#` in the env file.
@@ -99,14 +99,14 @@ On MacOS you will likely need to add the environment variable `OBJC_DISABLE_INIT
 
 ## Deployment
 
-First create a `.env` file and ensure it is correct.
+First create a `.env` file and ensure it is correct. Decide on a `prefix` that does not clash with others if you are running multiple instances on the same machine. If the prefixes clash then you will be building and running other peoples containers.
 
 ### Build the Docker Compose services.
 
 In the `code` directory:
 
 ```sh
-> docker compose build
+docker compose -p [prefix] build
 ```
 
 ### Run the Docker Compose services
@@ -114,5 +114,11 @@ In the `code` directory:
 In the `code` directory:
 
 ```sh
-> docker compose up
+docker compose -p [prefix] up
+```
+
+### Stop And Remove Docker Containers
+
+```sh
+docker compose -p [prefix] down
 ```
